@@ -1,0 +1,6 @@
+/* This adds 20 pixels to the back width. */
+
+#back
+{
+	width: 244px;
+}
