@@ -2,6 +2,7 @@
 1.3.3 (Changes since 1.3.2) 2011-11-11
 
 - Spanish localization added courtesy of Javier Tamames
+- Widen widget back for some localizations to avoid popup overrun
 
 
 1.3.2 (Changes since 1.3.1) 2011-11-11
